--- a/week_5.vcxproj.filters
+++ b/week_5.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="day_2.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_3.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
