--- a/week_5.vcxproj
+++ b/week_5.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="day_1.c" />
     <ClCompile Include="day_2.c" />
+    <ClCompile Include="day_3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
