--- a/week_5.vcxproj
+++ b/week_5.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="day_1.c" />
     <ClCompile Include="day_2.c" />
     <ClCompile Include="day_3.c" />
+    <ClCompile Include="day_4.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
