--- a/week_5.vcxproj.filters
+++ b/week_5.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="day_4.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_5.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_6.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
