--- a/week_5.vcxproj.filters
+++ b/week_5.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="day_6.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_7.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
