--- a/week_5.vcxproj
+++ b/week_5.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="day_4.c" />
     <ClCompile Include="day_5.c" />
     <ClCompile Include="day_6.c" />
+    <ClCompile Include="day_7.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
