--- a/week_6.vcxproj.filters
+++ b/week_6.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="day_1.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_2.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
