--- a/contact_2.0_dynamic/contact_2.0_dynamic.vcxproj.filters
+++ b/contact_2.0_dynamic/contact_2.0_dynamic.vcxproj.filters
@@ -15,14 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="day_1.c">
+    <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="day_2.c">
+    <ClCompile Include="contact.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="day_3.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="contact.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
