--- a/week_6.vcxproj
+++ b/week_6.vcxproj
@@ -130,6 +130,10 @@
     <ClCompile Include="day_1.c" />
     <ClCompile Include="day_2.c" />
     <ClCompile Include="day_3.c" />
+    <ClCompile Include="day_4.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
