--- a/week_6.vcxproj.filters
+++ b/week_6.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClCompile Include="day_3.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_4.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt">
+      <Filter>源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
