--- a/contact_3.0_file/contact_3.0_file.vcxproj.filters
+++ b/contact_3.0_file/contact_3.0_file.vcxproj.filters
@@ -15,25 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="day_1.c">
+    <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="day_2.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="day_3.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="day_4.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="day_5.c">
+    <ClCompile Include="contact.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="test.txt">
-      <Filter>源文件</Filter>
-    </Text>
+    <ClInclude Include="contact.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
