--- a/week_6.vcxproj
+++ b/week_6.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="day_4.c" />
     <ClCompile Include="day_5.c" />
     <ClCompile Include="day_6.c" />
+    <ClCompile Include="day_7.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
