--- a/week_6.vcxproj.filters
+++ b/week_6.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="day_6.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_7.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt">
