--- a/week_8.vcxproj.filters
+++ b/week_8.vcxproj.filters
@@ -14,4 +14,18 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="day_1.1.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_1.2.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_1.3.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_1.4.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
