--- a/week_8.vcxproj.filters
+++ b/week_8.vcxproj.filters
@@ -27,5 +27,28 @@
     <ClCompile Include="day_1.4.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_2.1.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_2.2.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="queue.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_2.3.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_2.4.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_2.5.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="queue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
