--- a/Sort/Sort.vcxproj
+++ b/Sort/Sort.vcxproj
@@ -127,11 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MySort.c" />
+    <ClCompile Include="Mytest.c" />
     <ClCompile Include="Sort.c" />
+    <ClCompile Include="stack.c" />
     <ClCompile Include="test.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MySort.h" />
     <ClInclude Include="Sort.h" />
+    <ClInclude Include="stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
