--- a/Sort_Practice/Sort_Practice.vcxproj.filters
+++ b/Sort_Practice/Sort_Practice.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="OutMergeSort.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sort.h">
