--- a/learn_cpp/learn_cpp.vcxproj.filters
+++ b/learn_cpp/learn_cpp.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="day_1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
