--- a/learn_cpp/learn_cpp.vcxproj.filters
+++ b/learn_cpp/learn_cpp.vcxproj.filters
@@ -21,5 +21,19 @@
     <ClCompile Include="day_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="day_4.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="common.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="head.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
