--- a/learn_cpp/learn_cpp.vcxproj.filters
+++ b/learn_cpp/learn_cpp.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="common.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_5.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h">
