--- a/learn_cpp/learn_cpp.vcxproj
+++ b/learn_cpp/learn_cpp.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="day_3.cpp" />
     <ClCompile Include="day_4.cpp" />
     <ClCompile Include="day_5.cpp" />
+    <ClCompile Include="day_6.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h" />
