--- a/learn_cpp/learn_cpp.vcxproj.filters
+++ b/learn_cpp/learn_cpp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="day_6.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="day_7.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h">
