--- a/week_10.vcxproj
+++ b/week_10.vcxproj
@@ -129,6 +129,8 @@
   <ItemGroup>
     <ClCompile Include="string.cpp" />
     <ClCompile Include="template.cpp" />
+    <ClCompile Include="test.c" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
