--- a/my_vector/my_vector.vcxproj
+++ b/my_vector/my_vector.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9da594cd-6f82-4550-87b9-ea9dab8e99a3}</ProjectGuid>
-    <RootNamespace>mystring</RootNamespace>
+    <ProjectGuid>{3832d150-b855-4fad-9e28-857be19dbda8}</ProjectGuid>
+    <RootNamespace>myvector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="string.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="simple.h" />
-    <ClInclude Include="string.h" />
+    <ClCompile Include="practice.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
