--- a/my_vector/my_vector.vcxproj.filters
+++ b/my_vector/my_vector.vcxproj.filters
@@ -15,16 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="string.cpp">
+    <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="string.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="simple.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <ClCompile Include="practice.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
