--- a/vector/vector.vcxproj
+++ b/vector/vector.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9da594cd-6f82-4550-87b9-ea9dab8e99a3}</ProjectGuid>
-    <RootNamespace>mystring</RootNamespace>
+    <ProjectGuid>{f61d47a4-dc40-4212-a305-ebb8ce3ff7ca}</ProjectGuid>
+    <RootNamespace>vector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="string.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="simple.h" />
-    <ClInclude Include="string.h" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
