--- a/my_vector/my_vector.vcxproj.filters
+++ b/my_vector/my_vector.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="practice.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="file_png.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
