--- a/my_vector/my_vector.vcxproj
+++ b/my_vector/my_vector.vcxproj
@@ -129,7 +129,11 @@
   <ItemGroup>
     <ClCompile Include="file_png.c" />
     <ClCompile Include="practice.cpp" />
+    <ClCompile Include="research.c" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
