--- a/my_vector/my_vector.vcxproj.filters
+++ b/my_vector/my_vector.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClCompile Include="file_png.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="research.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
