--- a/AVLtree/AVLtree/AVLtree.vcxproj
+++ b/AVLtree/AVLtree/AVLtree.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1c3e2b14-57c9-48c1-b197-3a90f17af0ca}</ProjectGuid>
     <RootNamespace>AVLtree</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>AVLTree</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,10 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AVLtree.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AVLtree.h" />
+    <ClInclude Include="AVLTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
