--- a/AVLtree/AVLtree/AVLtree.vcxproj
+++ b/AVLtree/AVLtree/AVLtree.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{1c3e2b14-57c9-48c1-b197-3a90f17af0ca}</ProjectGuid>
     <RootNamespace>AVLtree</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>map_set</ProjectName>
+    <ProjectName>AVL_RBTree</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
