--- a/Hash/Hash/Hash.vcxproj
+++ b/Hash/Hash/Hash.vcxproj
@@ -129,6 +129,12 @@
   <ItemGroup>
     <ClCompile Include="test.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HashTable.h" />
+    <ClInclude Include="MyHashTable.h" />
+    <ClInclude Include="MyUnordered_map.h" />
+    <ClInclude Include="MyUnordered_set.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
