--- a/C++11/C++11/C++11.vcxproj
+++ b/C++11/C++11/C++11.vcxproj
@@ -127,8 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="functional.cpp" />
     <ClCompile Include="right_ref.cpp" />
     <ClCompile Include="template_parameter.cpp" />
+    <ClCompile Include="thread.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="list.h" />
