--- a/tcp_ip/tcp_ip/tcp_ip.vcxproj
+++ b/tcp_ip/tcp_ip/tcp_ip.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d33a3c1d-89fa-4c2d-9b9d-7807a7fc08fc}</ProjectGuid>
-    <RootNamespace>C11</RootNamespace>
+    <ProjectGuid>{6db2afc8-f583-4a34-9cdb-44e3f0338ca4}</ProjectGuid>
+    <RootNamespace>tcpip</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,17 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="exception.cpp" />
-    <ClCompile Include="functional.cpp" />
-    <ClCompile Include="right_ref.cpp" />
-    <ClCompile Include="smartPtr.cpp" />
-    <ClCompile Include="template_parameter.cpp" />
-    <ClCompile Include="test.cpp" />
-    <ClCompile Include="thread.cc" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="list.h" />
-    <ClInclude Include="vector.h" />
+    <ClCompile Include="udpClient.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
