--- a/graph/graph/graph.vcxproj
+++ b/graph/graph/graph.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f218936d-6107-49cb-9776-d75b0647e8e7}</ProjectGuid>
     <RootNamespace>graph</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>graph_Btree_Skiplist</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -130,7 +131,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BTree.h" />
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="SkipList.h" />
     <ClInclude Include="UnionFindSet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
