--- a/learn_13/test/test/test.vcxproj.filters
+++ b/learn_13/test/test/test.vcxproj.filters
@@ -21,5 +21,14 @@
     <ClCompile Include="test_bit.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_dfs.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="math.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="test_boost.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
