--- a/learn_13/test/test/test.vcxproj.filters
+++ b/learn_13/test/test/test.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="test_interplote.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_xlnt.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
