--- a/learn_13/turbineLineInterplator/turbineLineInterplator/imgui.ini
+++ b/learn_13/turbineLineInterplator/turbineLineInterplator/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=651,20
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
-Size=339,180
+Pos=52,41
+Size=559,299
+Collapsed=0
+
+[Window][Example: Console]
+Pos=161,101
+Size=520,600
 Collapsed=0
 
