--- a/OJ/OJ/OJ.vcxproj.filters
+++ b/OJ/OJ/OJ.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="oj_dp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="oj3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
