--- a/learn_13/turbineLineInterplator/turbineLineInterplator/imgui.ini
+++ b/learn_13/turbineLineInterplator/turbineLineInterplator/imgui.ini
@@ -1,20 +1,123 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=636,35
+Size=603,595
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=651,20
-Size=550,680
+Size=567,667
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=52,41
-Size=559,299
+Pos=267,58
+Size=561,554
 Collapsed=0
 
 [Window][Example: Console]
 Pos=161,101
 Size=520,600
 Collapsed=0
+
+[Window][Another Window]
+Pos=19,326
+Size=705,350
+Collapsed=0
+
+[Window][‰∏ªÁïåÈù¢!]
+Pos=60,60
+Size=339,180
+Collapsed=0
+
+[Window][÷˜ΩÁ√Ê!]
+Pos=60,60
+Size=673,508
+Collapsed=0
+
+[Window][‰∏ªÁïåÈù?]
+Pos=60,60
+Size=339,180
+Collapsed=0
+
+[Window][÷˜ΩÁ√Ê]
+Pos=60,60
+Size=546,260
+Collapsed=0
+
+[Window][‰∏ªÁïåÈù¢]
+Pos=78,31
+Size=675,696
+Collapsed=0
+
+[Window][ÁïåÈù¢Â§ñËßÇËÆæÁΩÆ]
+Pos=697,77
+Size=451,599
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
 
