删除临时文件

--- a/learn_13/test/test/test.vcxproj
+++ b/learn_13/test/test/test.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="test_dfs.cpp" />
     <ClCompile Include="test_easyX.cpp" />
     <ClCompile Include="test_interplote.cpp" />
+    <ClCompile Include="test_lambda.cpp" />
     <ClCompile Include="test_xlnt.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
