--- a/learn_14/Qt/MyMusic/.gitignore
+++ b/learn_14/Qt/MyMusic/.gitignore
@@ -1,3 +1,6 @@
+/build
+/out
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
